Add getMenuitem
